--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "crashcatchlib-reactjs",
   "author": "Chris Board <support@boardiesitsolutions.com> (https://crashcatch.com)",
-  "version": "2.0.5",
+  "version": "2.0.8",
   "description": "Receive crash and error reports for JS and ReactJS projects",
-  "main": "index.js",
+  "main": "./lib/cjs/index.js",
+  "module": "./lib/esm/index.js",
+  "types": "./lib/esm/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm run build:esm && npm run build:cjs",
+    "build:esm": "tsc",
+    "build:cjs": "tsc --module commonjs --outDir lib/cjs"
   },
   "license": "ISC",
   "dependencies": {
@@ -13,6 +18,8 @@
     "sourcemapped-stacktrace": "^1.1.11"
   },
   "peerDependencies": {
-    "react": "^17.0.2"
+    "react": "^17.0.2",
+    "@types/react": "17.0.37",
+    "@types/react-dom": "17.0.11"
   }
 }
